# risk-copilot

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_reference_examples.py  003_add_processed_documents.py  004_add_processing_analytics.py  005_add_batch_processing.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/middleware/: auth.py  logging.py
backend/app/api/routes/: analytics.py  auth.py  batch.py  document_processing.py  documents.py  health.py  reference_examples.py  reference_library.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/models/: database.py  schemas.py
backend/app/services/: ai_service.py  analytics_service.py  batch_processor.py  document_ai_processor.py  document_generator.py  document_parser.py  document_processor.py  file_storage.py  pgvector_store.py  section_detector.py  term_cache.py  term_extractor.py  vector_store.py
backend/app/workers/: tasks.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_documents.py  test_health.py  test_references.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BatchTermImport.tsx  Dashboard.tsx  DocumentUpload.tsx  Layout.tsx  ProcessingStatus.tsx  ProtectedRoute.tsx  SectionSelector.tsx  TermMapper.tsx  ThemeToggle.tsx
frontend/src/hooks/: useAuth.ts  useDocuments.ts
frontend/src/pages/: Analytics.tsx  Batch.tsx  Documents.tsx  Login.tsx  ReferenceLibrary.tsx  Register.tsx  Setup2FA.tsx  Verify2FA.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  themeStore.ts
(+1 files in other folders)
